--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "export weather data from openweathermap to google sheets",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start-dev": "nodemon src/server/index.js",
-    "start": "node src/server/index.js"
+    "start": "node src/server/index.js",
+    "test": "jest test"
   },
   "repository": {
     "type": "git",
@@ -28,5 +28,8 @@
     "node": "^9.11.0",
     "nodemon": "^1.17.3",
     "path": "^0.12.7"
+  },
+  "devDependencies": {
+    "jest": "^22.4.3"
   }
 }
